linked Poppins font

--- a/css/style.css
+++ b/css/style.css
@@ -4,6 +4,8 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    font-family: "Poppins", sans-serif;
+
 
 }
 
@@ -11,6 +13,7 @@
 
 body{
     background-color: #F6F8F9;
+
 }
 
 /* Header */
