--- a/css/style.css
+++ b/css/style.css
@@ -33,4 +33,30 @@ img{
 
 /* Main */
 
+main{
+    width: 70%;
+    margin: 0 auto;
+}
+
+section{
+    padding: 0 60px;
+}
+
+#button-section{
+    padding-top: 15px;
+    padding-bottom: 15px;
+    border-radius: 10px 10px 0 0;
+    border-bottom: 3px solid #F6F8F9;
+}
+
+#ul-section{
+    padding-top: 35px;
+    padding-bottom: 35px;
+    border-radius: 0 0 10px 10px;
+
+
+}
+
+
+
 
