--- a/css/style.css
+++ b/css/style.css
@@ -5,6 +5,7 @@
     padding: 0;
     box-sizing: border-box;
     font-family: "Poppins", sans-serif;
+    color: #434851;
 
 }
 
@@ -67,7 +68,7 @@ section{
     border: 2px solid lightgray;
     font-size: 15px;
     margin-right: 1px;
-
+    color: black;
 
 }
 
