--- a/css/style.css
+++ b/css/style.css
@@ -102,6 +102,13 @@ h2{
 ul{
     list-style: none;
     font-size: 18px;
+    margin-bottom: 25px;
+}
+
+li{
+
+    margin-bottom: 15px;
+
 }
 
 .tag{
