--- a/css/style.css
+++ b/css/style.css
@@ -120,6 +120,53 @@ li{
 
 }
 
+.cross{
+    display: inline-block;
+    color: #e81313;
+    height: 20px;
+    width: 20px;
+    border: 1px solid #e81313;
+    border-radius: 100%;
+    text-align: center;
+    line-height: 18px;
+    font-size: 11px;
+    margin-right: 10px;
+}
+
+.editorial{
+    background-color: #14AAF5;
+
+}
+
+.q1-goals{
+    background-color: #AB5DE6;
+
+}
+
+.recruiting{
+    background-color: #2CC6AB;
+
+}
+
+.mobile{
+    background-color: #FF9B00;
+
+}
+
+.website{
+    background-color:#EC4A9D;
+
+}
+
+.sales{
+    background-color: #A3D116;
+
+}
+
+
+
+
+
 
 
 
